Fixtures/SwiftBuildLogging/SyntaxErrorDiagnostic/Sources/SyntaxErrorDiagnostic/SyntaxErrorDiagnostic.swift
// This is a comment.
// A comment is not an error.

func mySyntaxError() {
    lett myVar: Int = 42
    print("My var is \(myVar)!")
}